@startuml
title Diagrama de Classes - Fluxo de Funcionário
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Exceptions" {
    class ValidationException <<exception>> {
        +status_code : int
        +detail : str
    }
    class DuplicateException <<exception>> {
        +status_code : int
        +detail : str
    }
    class DatabaseException <<exception>> {
        +status_code : int
        +detail : str
    }
}

package "Models/Domains" {
    class Usuario {
        #id : int
        #email : str
        #senha : str
        #foto : str
        +to_dict()
    }

    class Funcionario {
        +eh_barbeiro : bool
        +eh_admin : bool
        +to_dict()
    }

    Usuario <|-- Funcionario
}

package "Config" {
    class PersistenceConfig {
        +persistence_type : str
        +is_memory() : bool
    }
}

package "Repositories" {
    class RepositoryFactory << (S,#FF7700) Singleton >> {
        +get_funcionario_repository()
    }

    class FuncionarioDBRepository {
        +criar(funcionario: Funcionario)
        +listar()
    }

    class FuncionarioMemoryRepository {
        +criar(funcionario: Funcionario)
        +listar()
    }
}

package "Services" {
    class ValidacaoService {
        +validar_email(email)
        +validar_senha(senha, ...)
    }
    class SenhaService {
        +hash_senha(senha)
    }
}

package "Managers" {
    class FuncionarioManager {
        +listar_funcionarios()
        +criar_funcionario(dados)
    }
}

package "Controllers" {
    class FuncionarioController {
        +_registrar_rotas()
    }
}

' Relacionamentos baseados no código
FuncionarioController --> FuncionarioManager : usa

' O Manager usa os serviços e trata/propaga exceções
FuncionarioManager --> Services: usa

' O Factory decide baseado na config
RepositoryFactory ..> PersistenceConfig : consulta
RepositoryFactory ..> FuncionarioDBRepository : cria/retorna
RepositoryFactory ..> FuncionarioMemoryRepository : cria/retorna

' O Manager pede à factory e guarda a referência
FuncionarioManager ..> RepositoryFactory : solicita repositório

' Repositórios manipulam a Model
FuncionarioDBRepository ..> Funcionario : persiste
FuncionarioMemoryRepository ..> Funcionario : persiste

' Relacionamentos com Exceções
ValidacaoService ..> ValidationException : lança
FuncionarioDBRepository ..> DatabaseException : lança
FuncionarioDBRepository ..> DuplicateException : lança
FuncionarioMemoryRepository ..> DuplicateException : lança
@enduml